--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@antv/f2": "^3.8.9",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
